Fixed buttons in footer on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,7 @@ header {
     display: flex;
     justify-content: center;
     padding: .2em 0;
-    font-size: 2.8rem;
+    font-size: var(--fs-h3);
 }
 
 .social-list__item {
